<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jugar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".entertainment.PlayGameGuessActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/string_game_guess_lbl_initial_lifes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_game_lifes"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_game_counter"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="center" />

            <TextView
                android:text="@string/string_game_guess_lbl_initial_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_game_points"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/homero"
            android:id="@+id/img_vw_game_show"
            android:layout_weight="40"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_txt_game_answer"
            android:hint="@string/string_game_guess_edt_txt_hint"
            android:layout_weight="1" />

        <Button
            android:text="@string/string_game_guess_btn_confirm_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:id="@+id/btn_game_confirm"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:text="@string/string_game_guess_message_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_game_correct"
        android:layout_marginBottom="148dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="invisible" />

    <TextView
        android:text="@string/string_game_guess_message_incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_game_incorrect"
        android:layout_alignBaseline="@+id/lbl_game_correct"
        android:layout_alignBottom="@+id/lbl_game_correct"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

</RelativeLayout>