<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intro"
    tools:context=".introduction.IntroductionActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_intro_content"
        android:layout_width="match_parent"
        android:layout_height="470dp">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/view_intro_ico_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="20dp"></LinearLayout>

    <Button
        android:id="@+id/btn_intro_slide_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:text="@string/string_intro_btn_prev"
        android:textColor="@color/white"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_intro_slide_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/string_intro_btn_next" />

    <Button
        android:id="@+id/btn_intro_close_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:text="@string/string_intro_btn_skip" />


</RelativeLayout>