<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/button_background">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_vw_profile_user_photo"
                android:src="@drawable/icono_main_menu_profile"
                android:layout_marginTop="10dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_profile_user_name_title"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_profile_lbl_name"
                    android:textColor="@color/white">

                </TextView>
                <TextView
                    android:id="@+id/lbl_profile_user_email_title"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_profile_lbl_email"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_profile_user_name"
                    android:fontFamily="sans-serif"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_profile_lbl_user_name"
                    android:textColor="@color/white">

                </TextView>
                <TextView
                    android:id="@+id/lbl_profile_user_email"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_profile_lbl_user_email"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

        </LinearLayout>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_profile_edit_user_name"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_height="25dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:ems="9"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_background"
                    android:text="@string/string_profile_btn_change_name">

                </Button>

                <Button
                    android:id="@+id/btn_profile_update_user_photo"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_height="35dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:ems="9"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_background"
                    android:text="@string/string_profile_btn_change_photo"
                    android:onClick="changeImageProfile">

                </Button>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        </LinearLayout>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>



